--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Run recipe
         shell: bash
         run: |
-          title=${{ github.event.issue.title }}
+          title='${{ github.event.issue.title }}'
           recipes=$(python -c "print('$title').replace('[build] ', '')")
           for i in $(echo $recipes | tr " " "\n")
           do
