--- a/.github/workflows/dep-monthly.yml
+++ b/.github/workflows/dep-monthly.yml
@@ -2,9 +2,20 @@ name: Run CEQR Recipe
 on:
   schedule:
     - cron: 0 0 1 * *
+  
 jobs:
+  issueCheck:
+    runs-on: ubuntu-latest
+    steps:
+      - if: startsWith(github.event.issue.title, '[publish] dep_cats_permits') != 'true'
+        name: Close Issue
+        uses: peter-evans/close-issue@v1
+        with:
+          comment: |
+            Previous version unpublished, closing, so that we can generate a new version
   build:
     runs-on: ubuntu-latest
+    needs: issueCheck
     env:
       RECIPE_ENGINE: ${{ secrets.RECIPE_ENGINE }}
       EDM_DATA: ${{ secrets.EDM_DATA }}
@@ -21,3 +32,24 @@ jobs:
       - name: Run recipe
         shell: bash
         run: ./ceqr run recipe dep_cats_permits
+  
+      - uses: nashmaniac/create-issue-action@v1.1
+        name: Create Issue to Publish
+        with:
+          title: [publish] dep_cats_permits
+          token: ${{secrets.GITHUB_TOKEN}}
+          assignees: nnxka, sptkl
+          labels: publish
+          body: |
+            🎉 A fresh run of dep_cats_permits is complete !
+
+            ## Staging files output:
+            - [ ] [version.txt](https://nyc3.digitaloceanspaces.com/edm-publishing/ceqr-app-data-staging/dep_cats_permits/latest/version.txt)
+            - [ ] [dep_cats_permits.zip](https://nyc3.digitaloceanspaces.com/edm-publishing/ceqr-app-data-staging/dep_cats_permits/latest/dep_cats_permits.zip)
+            - [ ] [dep_cats_permits.csv](https://nyc3.digitaloceanspaces.com/edm-publishing/ceqr-app-data-staging/dep_cats_permits/latest/dep_cats_permits.csv)
+            - [ ] [ReadMe_DEPCATS.pdf](https://nyc3.digitaloceanspaces.com/edm-publishing/ceqr-app-data-staging/dep_cats_permits/latest/ReadMe_DEPCATS.pdf)
+
+            ## Next Steps: 
+            If you have manually checked above files and they seem to be ok, comment publish under this issue. 
+            This would allow github actions to move staging files to production. 
+            Feel free to close this issue once it's all complete. Thanks!
