--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,7 +9,10 @@ jobs:
     if: >- 
       contains(github.event.issue.title, '[publish]') && 
       contains(github.event.comment.body, '[publish]') && 
-      github.event.comment.author_association == 'MEMBER'
+      (
+        github.event.comment.user.login == 'nnxka'||
+        github.event.comment.author_association == 'MEMBER'
+      )
     env:
       AWS_S3_ENDPOINT: ${{ secrets.AWS_S3_ENDPOINT }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
