--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,12 @@ on:
 
 jobs:
   push:
-    if: github.event.issue.author_association == 'MEMBER' && contains(github.event.issue.title, '[build]')
+    if: contains(github.event.issue.title, '[build]') &&
+      (
+        github.event.issue.user.login == 'mgraber'||
+        github.event.issue.user.login == 'SPTKL'||
+        github.event.issue.author_association == 'MEMBER'
+      )
     runs-on: ubuntu-latest
     env:
       RECIPE_ENGINE: ${{ secrets.RECIPE_ENGINE }}
