--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,9 @@ jobs:
     if: >- 
       contains(github.event.issue.title, '[build]') && 
       (
-        github.event.comment.user.login == 'mgraber'||
-        github.event.comment.user.login == 'SPTKL'||
-        github.event.comment.author_association == 'MEMBER'
+        github.event.issue.user.login == 'mgraber'||
+        github.event.issue.user.login == 'SPTKL'||
+        github.event.issue.author_association == 'MEMBER'
       )
     runs-on: ubuntu-latest
     env:
