--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,8 @@ on:
   push:
   workflow_dispatch:
     inputs:
-      datasets:
-        description: 'List datasets to build, space-separated'
+      dataset:
+        description: 'Dataset to build'
         required: true
         default: ''
       publish:
@@ -13,7 +13,7 @@ on:
         default: 'no'
 
 jobs:
-  push:
+  build:
     if: >- 
       github.event_name == 'workflow_dispatch'
       && 
@@ -36,39 +36,28 @@ jobs:
         shell: bash
         run: ./ceqr setup
 
-      - name: Datasets to update...
-        run: echo "${{ github.event.inputs.datasets }}"
-
-      - name: Run recipes
+      - name: Run recipe
         shell: bash
-        run: |
-          for i in ${{ github.event.inputs.datasets }}
-          do
-            ./ceqr run recipe $i
-          done
+        run: ./ceqr run recipe ${{ github.event.inputs.dataset }}
       
       - uses: nashmaniac/create-issue-action@v1.1
         name: Create Issue to Publish
         if: github.event.inputs.publish == 'yes'
-        with: 
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const title = `[publish] ${{ github.event.inputs.datasets }}`;
-            const body = `
-            ## There are new versions available of the following dataset(s)
-            ## Dataset(s): 
-            ${{ github.event.inputs.datasets }}
+        with:
+          title: |
+            [publish] ${{ github.event.inputs.dataset }}
+          token: ${{secrets.GITHUB_TOKEN}}
+          assignees: nnxka
+          labels: publish
+          body: |
+            A fresh run of ${{ github.event.inputs.dataset }} is complete! 🎉
+
+            ## Staging files output:
+            - [ ] [version.txt](https://nyc3.digitaloceanspaces.com/edm-publishing/ceqr-app-data-staging/${{ github.event.inputs.dataset }}/latest/version.txt)
+            - [ ] [${{ github.event.inputs.dataset }}.zip](https://nyc3.digitaloceanspaces.com/edm-publishing/ceqr-app-data-staging/${{ github.event.inputs.dataset }}/latest/${{ github.event.inputs.dataset }}.zip)
+            - [ ] [${{ github.event.inputs.dataset }}.csv](https://nyc3.digitaloceanspaces.com/edm-publishing/ceqr-app-data-staging/${{ github.event.inputs.dataset }}/latest/${{ github.event.inputs.dataset }}.csv)
 
             ## Next Steps: 
-            If you have manually checked above files and they seem to be ok, comment \`[publish]\` under this issue. 
+            If you have manually checked above files and they seem to be ok, comment `[publish]` under this issue. 
             This would allow github actions to move staging files to production. 
             Feel free to close this issue once it's all complete. Thanks!
-            `;
-            github.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: title,
-              body: body,
-              assignees: ["nnxka"],
-              labels: ['publish']
-            });
