--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
         contains(github.event.issue.title, '[publish]') && 
         contains(github.event.comment.body, '[publish]') && 
         (
-          github.event.comment.user.login == 'rtblair'||
+          github.event.comment.user.login == 'ileoyu'||
           github.event.comment.author_association == 'MEMBER'
         )
       ) ||
