--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,8 +34,8 @@ jobs:
         shell: bash
         run: ./ceqr run recipe ${{ github.event.inputs.dataset }}
       
-      - name: Create an issue
-        uses: JasonEtco/create-an-issue@v2.6.0
+      - uses: JasonEtco/create-an-issue@v2.6.0
+        name: Create an issue
         if: github.event.inputs.publish == 'yes'
         with:
           filename: .github/ISSUE_TEMPLATE/build-issue.md
