--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,7 @@ jobs:
         if: github.event.inputs.publish == 'yes'
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          dataset: ${{ github.event.inputs.dataset }}
         with:
           filename: .github/ISSUE_TEMPLATE/build-issue.md
           assignees: jpiacentinidcp, ileoyu
