--- a/.github/workflows/dep-monthly.yml
+++ b/.github/workflows/dep-monthly.yml
@@ -1,9 +1,11 @@
 name: Monthly Run DEP CATS permits
 on:
+  workflow_dispatch:
   schedule:
     - cron: 0 0 1 * *
   repository_dispatch:
     types: [dep_cats_permits]
+
 jobs:
   build:
     runs-on: ubuntu-latest
