--- a/.github/workflows/dep-monthly.yml
+++ b/.github/workflows/dep-monthly.yml
@@ -31,6 +31,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         with:
+          filename: .github/ISSUE_TEMPLATE/dep-monthly.md
           title: |
             [publish] dep_cats_permits
           assignees: jpiacentinidcp,ileoyu,omarortiz1
