--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,24 +34,14 @@ jobs:
         shell: bash
         run: ./ceqr run recipe ${{ github.event.inputs.dataset }}
       
-      - uses: nashmaniac/create-issue-action@v1.1
+      - uses: JasonEtco/create-an-issue@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         name: Create Issue to Publish
         if: github.event.inputs.publish == 'yes'
         with:
+          filename: .github/ISSUE_TEMPLATE/build.md
           title: |
             [publish] ${{ github.event.inputs.dataset }}
-          token: ${{secrets.GITHUB_TOKEN}}
-          assignees: jpiacentinidcp,ileoyu,omarortiz1
+          assignees: jpiacentinidcp, ileoyu, omarortiz1
           labels: publish
-          body: |
-            A fresh run of ${{ github.event.inputs.dataset }} is complete! 🎉
-
-            ## Staging files output:
-            - [ ] [version.txt](https://nyc3.digitaloceanspaces.com/edm-publishing/ceqr-app-data-staging/${{ github.event.inputs.dataset }}/latest/version.txt)
-            - [ ] [${{ github.event.inputs.dataset }}.zip](https://nyc3.digitaloceanspaces.com/edm-publishing/ceqr-app-data-staging/${{ github.event.inputs.dataset }}/latest/${{ github.event.inputs.dataset }}.zip)
-            - [ ] [${{ github.event.inputs.dataset }}.csv](https://nyc3.digitaloceanspaces.com/edm-publishing/ceqr-app-data-staging/${{ github.event.inputs.dataset }}/latest/${{ github.event.inputs.dataset }}.csv)
-
-            ## Next Steps: 
-            If you have manually checked above files and they seem to be ok, comment `[publish]` under this issue. 
-            This would allow github actions to move staging files to production. 
-            Feel free to close this issue once it's all complete. Thanks!
