--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,7 @@ jobs:
       ( 
         github.event_name == 'issue_comment' &&
         contains(github.event.issue.title, '[publish]') && 
-        contains(github.event.comment.body, '[publish]') && 
-        (
+        contains(github.event.comment.body, '[publish]') && (
           github.event.comment.user.login == 'jpiacentinidcp'||
           github.event.comment.user.login == 'ileoyu'||
           github.event.comment.user.login == 'omarortiz1'||
@@ -28,7 +27,9 @@ jobs:
       (
         github.event_name == 'workflow_dispatch' &&
         github.event.inputs.dataset != ''
-      )
+      ) ||
+      contains(github.event.issue.labels.*.name, 'publish')
+
     env:
       AWS_S3_ENDPOINT: ${{ secrets.AWS_S3_ENDPOINT }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
