--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Build CEQR Dataset
+run-name: "Build CEQR Dataset: ${{ inputs.dataset }}"
 on:
   push:
   workflow_dispatch:
@@ -37,7 +38,7 @@ jobs:
 
       - name: Run recipe
         shell: bash
-        run: ./ceqr run recipe ${{ github.event.inputs.dataset }}
+        run: ./ceqr run recipe ${{ inputs.dataset }}
       
       # - uses: JasonEtco/create-an-issue@v2
       #   name: Create Issue to Publish
