2023 data update for schools data (#153)
* remove some unused gha stuff

* drop unused envar

* raise errors

* drop labs review input

* raise errors

* try not using docker-geosupport image

* generate python package requirements

* go back to docker-geosupport

* oops

* drop comment

* try to fail on python error in docker run

* pass envar to docker run

* validate some data

* create.sql expects PSTDIN content from build.py

* less printing to avoid stdout conflicts

* start using other runners

* use latest input data

* fail on sql errors

* try dataset in run name

* ensure PSTDOUT csv header delimited is a comma

* try piping output between bash lines

* try copying to text column

* try better output pipe

* troubleshoot double header

* undo troubleshoot

* try pipe delimiter

* use a csv instead of stdin

* try going back to bigint

* use csv instead of stdin

* must pass along python stdout

* cleanup

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
 name: Build CEQR Dataset
+run-name: "Build CEQR Dataset: ${{ inputs.dataset }}"
 on:
   push:
   workflow_dispatch:
@@ -7,10 +8,10 @@ on:
         description: 'Dataset to build'
         required: true
         default: ''
-      publish:
-        description: 'Should this build get assigned to Labs for review? (yes/no)'
-        required: false
-        default: 'no'
+      # publish:
+      #   description: 'Should this build get assigned to Labs for review? (yes/no)'
+      #   required: false
+      #   default: 'no'
 
 jobs:
   build:
@@ -24,7 +25,12 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
+      # - name: Setup python
+      #   uses: actions/setup-python@v4.5.0
+      #   with:
+      #     python-version: "3.11.1"
         
       - name: Install dependencies
         shell: bash
@@ -32,13 +38,13 @@ jobs:
 
       - name: Run recipe
         shell: bash
-        run: ./ceqr run recipe ${{ github.event.inputs.dataset }}
+        run: ./ceqr run recipe ${{ inputs.dataset }}
       
-      - uses: JasonEtco/create-an-issue@v2
-        name: Create Issue to Publish
-        if: github.event.inputs.publish == 'yes'
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-          DATASET: ${{ github.event.inputs.dataset }}
-        with:
-          filename: .github/ISSUE_TEMPLATE/build-publish.md
+      # - uses: JasonEtco/create-an-issue@v2
+      #   name: Create Issue to Publish
+      #   if: github.event.inputs.publish == 'yes'
+      #   env:
+      #     GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      #     DATASET: ${{ github.event.inputs.dataset }}
+      #   with:
+      #     filename: .github/ISSUE_TEMPLATE/build-publish.md
