cleanup build action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,16 @@
 name: Build CEQR Dataset
 run-name: "Build CEQR Dataset: ${{ inputs.dataset }}"
 on:
-  push:
   workflow_dispatch:
     inputs:
       dataset:
-        description: 'Dataset to build'
+        description: "Dataset to build"
         required: true
-        default: ''
-      # publish:
-      #   description: 'Should this build get assigned to Labs for review? (yes/no)'
-      #   required: false
-      #   default: 'no'
+        default: ""
 
 jobs:
   build:
-    if: >- 
+    if: >-
       github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
     env:
@@ -31,7 +26,7 @@ jobs:
       #   uses: actions/setup-python@v4.5.0
       #   with:
       #     python-version: "3.11.1"
-        
+
       - name: Install dependencies
         shell: bash
         run: ./ceqr setup
@@ -39,12 +34,3 @@ jobs:
       - name: Run recipe
         shell: bash
         run: ./ceqr run recipe ${{ inputs.dataset }}
-      
-      # - uses: JasonEtco/create-an-issue@v2
-      #   name: Create Issue to Publish
-      #   if: github.event.inputs.publish == 'yes'
-      #   env:
-      #     GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      #     DATASET: ${{ github.event.inputs.dataset }}
-      #   with:
-      #     filename: .github/ISSUE_TEMPLATE/build-publish.md
