--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Setup python
         uses: actions/setup-python@v4.5.0
         with:
-          python-version: "3.12.0"
+          python-version: "3.12.0-alpha.4"
 
       - name: Install dependencies
         shell: bash
