--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
 
       - uses: JasonEtco/create-an-issue@v2
         name: Create issue to review data to publish
-        if: inputs.run_export == true
+        if: inputs.publish == true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           DATASET: ${{ github.event.inputs.dataset }}
