--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,9 +16,8 @@ jobs:
       ( 
         github.event_name == 'issue_comment' &&
         contains(github.event.issue.title, '[publish]') && 
-        contains(github.event.comment.body, '[publish]') && (
-          github.event.comment.author_association == 'MEMBER'
-        )
+        contains(github.event.comment.body, '[publish]') &&
+        github.event.comment.author_association == 'MEMBER'
       ) ||
       (
         github.event_name == 'workflow_dispatch' &&
