--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,14 @@ jobs:
       ( 
         github.event_name == 'issue_comment' &&
         contains(github.event.issue.title, '[publish]') && 
-        contains(github.event.comment.body, '[publish]') &&
-        github.event.comment.author_association == 'MEMBER'
+        contains(github.event.comment.body, '[publish]') && (
+          github.event.comment.user.login == 'jpiacentinidcp'||
+          github.event.comment.user.login == 'ileoyu'||
+          github.event.comment.user.login == 'omarortiz1'||
+          github.event.comment.user.login == 'rtblair'||
+          github.event.comment.user.login == 'damonmcc'||
+          github.event.comment.author_association == 'MEMBER'
+        )
       ) ||
       (
         github.event_name == 'workflow_dispatch' &&
